--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ header{
 
 #tayler-p-tag{
    grid-area: tte;
-   text-align: justify;
+   text-align: left;
    margin-left: 20px;
 }
 
@@ -130,14 +130,14 @@ header{
 
 #he{
     grid-area: he;
-    text-align: end;
+    text-align: left;
     margin-right: 20px;
 }
 
 #te{
     grid-area: te;
     margin-right: 20px;
-    text-align: justify;
+    text-align: left;
 }
 
 #second-item-in-header{
@@ -229,7 +229,7 @@ header{
     grid-area: pit;
     margin-left: 20px;
     margin-right: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 #pi{
@@ -294,7 +294,7 @@ header{
 
 #ft{
     grid-area: ft;
-    text-align: center;
+    text-align: left;
     padding: 3px;
 }
 
@@ -350,7 +350,7 @@ header{
 
 .squares-menu{
     height: 200px;
-    width: 100%;
+    width: 400px;
     padding: 20px;
     margin: 20px;
     background-color: rgb(255, 219, 225);
@@ -434,7 +434,7 @@ header{
 }
 
 #welcome-text{
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
@@ -466,7 +466,7 @@ header{
     margin-right: 70px;
     margin-left: 70px;
     margin-top: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 #meals-grid{
@@ -539,7 +539,7 @@ header{
 #booking-text{
     grid-area: bot;
     width: 80%;
-    text-align: center;
+    text-align: left;
     margin-left: 20px;
 }
 
@@ -599,11 +599,12 @@ header{
 
 #wed-img{
     grid-area: wei;
-    width: 175px;
+    width: 60%;
 }
 
 #wed-txt{
     grid-area: wt;
+    text-align: left;
 }
 
 #flex-funeral{
@@ -617,12 +618,12 @@ header{
 }
 
 #short-church{
-    height: 125px;
-    width: 125px;
+    height: 30%;
+    width: 75%;
 }
 
 #long-church{
-    width: 180px;
+    width: 60%;
 }
 
 #art-funeral{
@@ -639,13 +640,15 @@ header{
 }
 
 #dop-1 img{
-    height: 90%;
+    height: 300px;
+    width: 100px;
 }
 
 #he-dop{
     text-align: center;
     margin-bottom: 5px;
 }
+
 
 #dop-2{
     margin-top: 25px;
@@ -657,7 +660,7 @@ header{
 }
 
 #dop-2 img{
-    width: 125px; 
+    width: 75%; 
     margin-bottom: 27.5px;
 }
 
@@ -672,7 +675,7 @@ header{
 #party-section p{
     margin-left: 20px;
     margin-right: 20px;
-    text-align: center;
+    text-align: left;
     margin-top: 5px;
     margin-bottom: 10px;
 }
@@ -699,7 +702,7 @@ header{
 }
 
 #loan-art-1{
-    text-align: center;
+    text-align: left;
     padding: 40px;
 }
 
@@ -731,13 +734,14 @@ header{
     margin: 20px;
     height: 600px;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
 }
 
 #flex-waiters img{
-    height: 220px;
-    width: auto;
+    height: auto;
+    width: 40%;
 }
 
 #wine-img{
@@ -997,14 +1001,6 @@ header{
         margin-left: 20px;
     }
 
-    #first-section-main-page{
-        display: flex;
-        flex-direction: column;
-        height: 400px;
-        align-items: center;
-        justify-content: center;
-    }
-
     #taylor-article{
         width: 40%;
         margin-bottom: 10px;
@@ -1075,6 +1071,10 @@ header{
         width: 400px;
     }
 
+    #width-menu p{
+        text-align: left;
+    }
+
     .book-button{
         margin: 0;
         margin-top: 20px;
@@ -1082,12 +1082,12 @@ header{
 
     #event-flex{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
     }
 
     .desktop-event-flex{
         width: 375px;
-        height: 350px;
+        height: auto;
         background-color: rgb(252, 185, 196);
         border-radius: 10px;
         justify-items: center;
@@ -1106,7 +1106,7 @@ header{
 
     #event-flex2{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         height: 650px;
     }
 
@@ -1140,10 +1140,19 @@ header{
     }
 
     #section-office-meals{
-        width: 1500px;
+        width: 40%;
         height: 600px;
         margin-top: 60px;
         display: flex;
+    }
+
+    #first-section-main-page{
+        display: flex;
+        width: 60%;
+        flex-direction: column;
+        height: 400px;
+        align-items: center;
+        justify-content: center;
     }
 
     #taylor-article{
@@ -1162,9 +1171,16 @@ header{
 
     .menu-looks{
         height: 400px;
-        width: 500px;
+        width: 90%;
         background-color: rgb(255, 219, 225);
         padding: 20px;
+        margin: 20px;
+    }
+
+    #flex-pictures{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
 
     #japanese-menu{
@@ -1194,14 +1210,14 @@ header{
 
     #grid-menu{
         display: grid;
-        grid-template-columns:10% 50% 50% 10%;
+        height: 900px;
+        grid-template-columns:10% 40% 40% 10%;
         grid-template-rows: 2% 50% 50%;
         grid-template-areas: 
-        ". is fs. "
+        ". is fs ."
         ". . . ."
-        ". ms jm. "
+        ". ms jm ."
         ;
-        padding: 25px;
     }
 
     #last-section-menu{
